mudanças na estrutura css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bem-Vindo ao meu Portfólio Web</h1>
-    <p>
+    <p id="sumario">
         <br>
         <ul>
             <li><a href="#exp">Experiência Profissional</a></li>
@@ -17,18 +18,20 @@
             <li><a href="#redes">Redes Sociais</a></li>
         </ul>
     </p>
-    <p><br></p>
+    
+    <img src="WhatsApp Image 2022-03-02 at 15.54.01.jpeg" alt="Minha foto aqui" id="minhaFoto">
+    
 
     <h2>Meu nome é Thiago Costa Seraphini</h2><br>
 
-    <img src="WhatsApp Image 2022-02-16 at 14.47.55.jpeg" alt="Minha foto aqui" width="400px"><br><br>
 
-    <p id="exp">Sou aluno do curso de Web Developers da <strong><a href="https://www.betrybe.com" target="_blank" >Trybe</a></strong>, tenho 30 anos e moro em Niterói RJ
+    <div id="conteudo">
+    <p id="exp">Sou aluno do curso de Web Developers da <strong><a href="https://www.betrybe.com" target="_blank" >Trybe</a></strong>, tenho 30<br> anos e moro em Niterói RJ
     <img src="WhatsApp-Image-2021-10-13-at-16.49.15-1024x653.jpeg" alt="Logo Trybe" width="50px"> </p>
 
     <p>Apaixonado por tecnologia e mercado financeiro</p>
 
-    <p>Sou uma pessoa bastante focada, tenho formação em engenharia e atuo há mais de 6 anos no setor de mercado financeiro, BMF/Bovespa na B3 nos seguintes ativos :<br>
+    <p>Sou uma pessoa bastante focada, tenho formação em engenharia <br> e atuo há mais de 6 anos no setor de mercado financeiro,<br> BMF/Bovespa na B3 nos seguintes ativos :<br>
         <ol>
             <li>Mini Índice Futuro</li>
             <li>Mini dólar </li>
@@ -67,6 +70,8 @@
     </p>
 
  Mande uma <i>mensagem</i> e vamos se conectar !
+
+</div>
 
 </body>
 </html>
